--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -5,6 +5,8 @@ services:
     buildCommand: go build -o main ./cmd/main.go
     startCommand: ./main
     envVars:
+      - key: PORT
+        value: 8080
       - key: MONGODB_URI
         sync: false
       - key: JWT_SECRET
